--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
-<% if user_signed_in? %>
-  <p>You are here ! <%= current_user.email %></p>
-  <% else %>
-  <p> You are not login</p>
-<% end %>
+<div class="container px-4 py-5 text-center">
+  <div class="row g-5">
+    <div class="col">
+      <img src="https://st3.depositphotos.com/30226412/33315/v/450/depositphotos_333157870-stock-illustration-initial-letter-gc-or-cg.jpg" class="d-block mx-auto mb-4" alt="Bootstrap" width="72" height="57">
+      <h1>💎 Gran Cars 💎</h1>
+      <p>The Luxury is here for you</p>
+
+    <% if user_signed_in? %>
+      <p class="text-success">Welcome <%= current_user.email %> !!!</p>
+    <% else %>
+      <p class="text-danger"> You are not login</p>
+    <% end %>
+
+    </div>
+  </div>
+</div><
