--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,22 @@
+<div class="banner" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-UcUC1vD1mJ1tf3DYs9EVliOprLWEoEzTww&s">
+
+          <div class="mx-5">
+            <h1>💎 Gran Cars 💎</h1>
+            <p>The Luxury is here for you</p>
+          </div>
+        </div>
 
 <div class="container px-4 py-5 text-center">
   <div class="row g-5">
     <div class="col">
-      <img src="https://st3.depositphotos.com/30226412/33315/v/450/depositphotos_333157870-stock-illustration-initial-letter-gc-or-cg.jpg" class="d-block mx-auto mb-4" alt="Bootstrap" width="72" height="57">
-      <h1>💎 Gran Cars 💎</h1>
-      <p>The Luxury is here for you</p>
 
     <% if user_signed_in? %>
       <p class="text-success">Welcome <%= current_user.email %> !!!</p>
     <% else %>
-      <p class="text-danger"> You are not login</p>
+      <h3>You are not logged in!</h3>
+      <p class="border border-end-0 border-start-0 border-dark-subtle mt-5 border-3">Elevate your driving experience! Luxury on four wheels!</p>
     <% end %>
 
     </div>
   </div>
-</div><
+</div>
