--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,10 @@
       <p class="border border-end-0 border-start-0 border-dark-subtle mt-5 border-3">Elevate your driving experience! Luxury on four wheels!</p>
     <% end %>
 
+    <div class="buttons">
+      <%= link_to "Cars", cars_path, class: "btn btn-secondary" %>
+      <%= link_to "Bookings", car_bookings_path(@car), class: "btn btn-secondary" %>
+    </div>
     </div>
   </div>
 </div>
