lien pour bookings

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
 
       <div class="buttons">
         <%= link_to "Cars", cars_path, class: "btn btn-secondary" %>
-        <%#= link_to "Bookings", bookings_path, class: "btn btn-secondary" if user_signed_in? %>
+        <%= link_to "Bookings", bookings_path, class: "btn btn-secondary" if user_signed_in? %>
       </div>
     </div>
   </div>
