finition du calendrier

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,7 +3,7 @@
     <%= f.input :start_date, label: "Start date",
             as: :string,
             input_html: { data: { controller: "datepicker" } } %>
-    <%= f.input :end_date, label: "End date" %>
+    <%= f.input :end_date, label: "End date", as: :string, input_html: { data: { controller: "datepicker" } } %>
     <%= f.input :status, label: "Status" %>
   </div>
 
