--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -7,7 +7,7 @@
           <div class="row no-gutters">
             <div class="col-md-4">
               <%= link_to car_path(car), class: "card-img-top" do %>
-                <img src="<%= car.photo %>" class="card-img-top" alt="">
+                <img src="<%= car.picture.url %>" class="card-img-top" alt="">
               <% end %>
             </div>
             <div class="col-md-8">
