--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,6 @@
 <%= simple_form_for [@car, @booking] do |f| %>
   <div class="form-inputs">
-    <%= f.input :start_date, label: "Start date",
-            as: :string,
-            input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :start_date, label: "Start date", as: :string, input_html: { data: { controller: "datepicker" } } %>
     <%= f.input :end_date, label: "End date", as: :string, input_html: { data: { controller: "datepicker" } } %>
     <%= f.input :status, label: "Status" %>
   </div>
