modif navbar et footer

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,21 @@
+.container-cars {
+  background-color: #e2dcdc;
+  margin-bottom: 50px;
+}
+
+.card-cars {
+  margin: 3em;
+}
+
+.card-car-info {
+  margin-bottom: 75px;
+}
+
+.title-cars {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-bottom: 50px;
+}
+
 .card-car-details {
   background-color: rgb(25, 22, 7);
   border: 1px solid #e6e6e6;
