--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar-lewagon {
-  position: fixed;
+  // position: fixed;
+  margin-bottom: 20px;
   justify-content: space-between;
   top: 0;
   width: 100%;
