--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,11 @@
 .footer {
   background-color: #f8f9fa;
-  padding: 10px 0;
+  padding: 5px 0;
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: auto;
 
   p {
     margin: 0; // Supprime les marges par défaut du paragraphe
