--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,26 +1,28 @@
-<div class="container">
+<div class="container-cars">
   <div class="row">
     <div class="col">
-      <h1 class="text-center">💎 Gran Cars 💎</h1>
-      <% @cars.each do |car| %>
-        <div class="card">
-          <div class="row no-gutters">
-            <div class="col-md-4">
-              <%= link_to car_path(car), class: "card-img-top" do %>
-                <img src="<%= car.picture.url %>" class="card-img-top" alt="">
-              <% end %>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h3 class="card-title"><%= car.name %></h3>
-                <p class="card-text">Location : <%= car.address %></p>
-                <p class="card-text">Price for a day: <%= car.price %> €</p>
-                <%= link_to "View Details", car_path(car), class: "btn btn-primary" %>
+      <div class="card-cars">
+        <h1 class="title-cars text-center">💎 Gran Cars 💎</h1>
+        <% @cars.each do |car| %>
+          <div class="card">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <%= link_to car_path(car), class: "card-img-top" do %>
+                  <img src="<%= car.picture.url %>" class="card-img-top" alt="">
+                <% end %>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h3 class="card-title"><%= car.name %></h3>
+                  <p class="card-text">Location : <%= car.address %></p>
+                  <p class="card-text">Price for a day: <%= car.price %> €</p>
+                  <%= link_to "View Details", car_path(car), class: "btn btn-primary" %>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
