Modif home page

--- a/app/assets/stylesheets/pages/_carousel.scss
+++ b/app/assets/stylesheets/pages/_carousel.scss
@@ -1,14 +1,14 @@
-#carouselGranCar {
-  width: 50%;
-  margin: 0 auto;
+// #carouselGranCar {
+//   width: 50%;
+//   margin: 0 auto;
 
-  .carousel-inner {
-    width: 100%;
-    height: auto;
-  }
+//   .carousel-inner {
+//     width: 100%;
+//     height: auto;
+//   }
 
-  .carousel-item img {
-    width: 100%;
-    height: auto;
-  }
-}
+//   .carousel-item img {
+//     width: 100%;
+//     height: auto;
+//   }
+// }
