--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,23 @@
 .navbar-lewagon {
   // position: fixed;
+  opacity: 0;
   margin-bottom: 20px;
   justify-content: space-between;
   top: 0;
   width: 100%;
   z-index: 1000;
-  background-color: #fff;
+  background-color: #1f242d;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.navbar-lewagon:hover {
+  opacity: 1;
+}
+
+.nav-link {
+  color: rgb(151, 145, 145);
+}
+.nav-link:hover {
+  color: rgb(218, 211, 211);
 }
 
 .navbar-lewagon .navbar-collapse {
