--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,28 +1,31 @@
 // Specific CSS for your home-page
 .banner{
-  padding: 150px 0;
+  padding: 40vh 0;
   color: white;
+  opacity: 0.8;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   justify-content: center;
-
+}
   h1 {
     font-size: 50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
+    text-align: center;
   }
 
   p{
+    text-align: center;
     font-size: 20px;
     color: rgb(210, 209, 209);
-    text-shadow: #1f242d 2px 1px 0px;
+    text-shadow:#1f242d  1px 1px 2px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     text-align: center;
   }
-}
+
 
 .banner .container h1{
   font-size: 50px;
@@ -30,18 +33,38 @@
   margin: 0;
 }
 
+.buttons {
+  margin-top: 20px;
+  display: block;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+}
+
+.btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #ffffff; /* Text color (white) */
+  background-color: #2c3e50; /* Dark background color */
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  text-decoration: none; /* Remove underline for anchor button */
+  opacity: 0.2; /* Initial opacity */
+  transition: opacity 0.5s ease-in-out; /* Animation for opacity */
+  z-index: 1; /* Ensure the button stays on top */
+}
+
+.btn:hover {
+  opacity: 1; /* Fully opaque on hover */
+  background-color: #1f242d; /* Darken the background color on hover */
+}
+
 #car-log {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
   background-color: #1f242d;
-
-  .buttons {
-    margin-top: 20px;
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
 
   h3 {
     color: white;
