--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= render "shared/flashes" %>
+    <%#= render "shared/flashes" %>
     <%= yield %>
 
-    <%= render "shared/footer" %>
+    <%#= render "shared/footer" %>
   </body>
 </html>
