--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -56,7 +56,7 @@
 }
 
 .btn:hover {
-  opacity: 1; /* Fully opaque on hover */
+  opacity: 0.8; /* Fully opaque on hover */
   background-color: #1f242d; /* Darken the background color on hover */
 }
 
@@ -78,7 +78,7 @@
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
-
+    opacity: 0.5;
   }
 }
 
