--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="card-cars">
-        <h1 class="title-cars text-center">💎 Gran Cars 💎</h1>
+        <h1 class="title-cars text-center"> Gran Cars </h1>
         <% @cars.each do |car| %>
           <div class="card">
             <div class="row no-gutters">
