--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,14 +1,33 @@
-<%= simple_form_for [@car, @booking] do |f| %>
-  <div class="form-inputs">
-    <%= f.input :start_date, label: "Start date", as: :string, input_html: { data: { controller: "datepicker" } } %>
-    <%= f.input :end_date, label: "End date", as: :string, input_html: { data: { controller: "datepicker" } } %>
-    <%= f.input :status, label: "Status" %>
-  </div>
+<div class="card-container">
+  <div class="row">
+    <div class="card-car-details">
+      <div class="card-car-info text-center">
+        <%= image_tag @car.picture.url, class: "picture-booking img-fluid rounded center-image" %>
+          <div class="container-booking">
+            <%= simple_form_for [@car, @booking] do |f| %>
+              <div class="form-inputs">
+                <%= f.input :start_date, label: "Start date", as: :string, input_html: { data: { controller: "datepicker" } } %>
+                <%= f.input :end_date, label: "End date", as: :string, input_html: { data: { controller: "datepicker" } } %>
+                <%= f.input :status, label: "Status", input_html: { value: 'Pending' }%>
+              </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Create Booking", class: "btn btn-primary" %>
+              <div class="form-actions">
+                <%= f.button :submit, "Create Booking", class: "btn btn-primary" %>
+              </div>
+              <% end %>
+          </div>
+          <h1><%= @car.name %></h1>
+          <br> <!-- Add a line break here -->
+          <h4><strong><i class="fa-solid fa-map-pin"></i> </strong><%= @car.address %></h4>
+        <br> <!-- Add a line break here -->
+        <h2 class="card-car-pricing"><%= @car.price %> <i class="fa-solid fa-euro-sign"></i> € /day</h2>
+        <br> <!-- Add a line break here -->
+      </div>
+    </div>
   </div>
-  <% end %>
+</div>
+
+
 <!--dans cette view-->
 <!-- englober les start date et end date dans un seul controller (datepicker)-->
 <!-- data-target = identifie les differents éléments (un sur startdate et un sur end date-->
