--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -9,7 +9,7 @@
             <div class="card-body">
               <h3 class="card-title"><%= car.name %></h3>
               <p class="card-text index-text"><i class="fa-solid fa-map-pin"></i> <%= car.address %></p>
-              <p class="card-text index-text"><%= car.price %> <i class="fa-solid fa-euro-sign"></i> /day </p>
+              <p class="card-text index-text"><%= car.price %> <i class="fa-solid fa-euro-sign"></i> € /day </p>
             </div>
           </div>
         <% end %>
