--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,7 +7,7 @@
           <br> <!-- Add a line break here -->
           <h4><strong><i class="fa-solid fa-map-pin"></i> </strong><%= @car.address %></h4>
         <br> <!-- Add a line break here -->
-        <h2 class="card-car-pricing"><%= @car.price %> <i class="fa-solid fa-euro-sign"></i> /day</h2>
+        <h2 class="card-car-pricing"><%= @car.price %> <i class="fa-solid fa-euro-sign"></i> € /day</h2>
         <br> <!-- Add a line break here -->
         <%= link_to "Book this Car", new_car_booking_path(car_id: @car.id), class: "btn btn-primary" %>
         <span class="btn-back"><%= link_to 'Back to Cars', cars_path, class: 'btn btn-secondary' %></span>
