--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,7 +1,7 @@
-<h1 class="mx-auto p-2" style="width: 200px;">New Car</h1>
+<h1 class="text-center text-light m-5">New Car</h1>
 
-<div class="container">
-  <div class="row" justify-content-center>
+<div class="container bg-dark text-light py-3 mb-5">
+  <div class="row g-3 p-3 m-2">
     <%= simple_form_for @car, html: { multipart: true } do |f| %>
 
       <div class="form-group">
@@ -20,11 +20,11 @@
         <%= f.input :picture, as: :file, input_html: { class: 'form-control' } %>
       </div>
 
-      <div class="form-group">
-        <%= f.button :submit, class: 'btn btn-primary' %>
+      <div class="form-group mb-5">
+        <%= f.button :submit, "Rent your car", class: 'btn btn-outline-light' %>
       </div>
     <% end %>
 
-    <%= link_to 'Back', cars_path, class: 'btn btn-secondary mt-3' %>
+    <%= link_to 'Back', cars_path, class: 'btn btn-outline-light mb-3' %>
   </div>
 </div>
