--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,30 +1,32 @@
 <h1 class="text-center text-light m-5">New Car</h1>
 
 <div class="container bg-dark text-light py-3 mb-5">
-  <div class="row g-3 p-3 m-2">
-    <%= simple_form_for @car, html: { multipart: true } do |f| %>
+  <div class="row g-3 p-3 m-2 justify-content-center">
+    <div class="col">
+        <%= simple_form_for @car, html: { multipart: true } do |f| %>
 
-      <div class="form-group">
-        <%= f.input :name, input_html: { class: 'form-control' } %>
+          <div class="form-group">
+            <%= f.input :name, input_html: { class: 'form-control' } %>
+          </div>
+
+          <div class="form-group">
+            <%= f.input :address, input_html: { class: 'form-control' } %>
+          </div>
+
+          <div class="form-group">
+            <%= f.input :price, input_html: { class: 'form-control' } %>
+          </div>
+
+          <div class="form-group">
+            <%= f.input :picture, as: :file, input_html: { class: 'form-control' } %>
+          </div>
+
+          <div class="form-group mb-5">
+            <%= f.button :submit, "Rent your car", class: 'btn btn-outline-light' %>
+          </div>
+        <% end %>
+
+        <%= link_to 'Back', cars_path, class: 'btn d-grid btn-outline-light mb-3' %>
       </div>
-
-      <div class="form-group">
-        <%= f.input :address, input_html: { class: 'form-control' } %>
-      </div>
-
-      <div class="form-group">
-        <%= f.input :price, input_html: { class: 'form-control' } %>
-      </div>
-
-      <div class="form-group">
-        <%= f.input :picture, as: :file, input_html: { class: 'form-control' } %>
-      </div>
-
-      <div class="form-group mb-5">
-        <%= f.button :submit, "Rent your car", class: 'btn btn-outline-light' %>
-      </div>
-    <% end %>
-
-    <%= link_to 'Back', cars_path, class: 'btn btn-outline-light mb-3' %>
   </div>
 </div>
