geocode importmap map config modif seed

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,10 +1,5 @@
-#car-map {
-  margin-top: 10px;
-  transition: opacity 0.3s ease;
-}
-
-.car-map img {
-  max-width: 30%;
-  height: auto;
-  border-radius: 5px;
+.car-map {
+  width: 550px;
+  height: 300px;
+  margin: 20px auto 0;
 }
