modif police booking start and end date

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-light mb-1 mt-1">New Car</h1>
+<h1 class="text-center text-light mb-1 mt-1">Rent your car</h1>
 
 <div class="container bg-dark text-light py-3 mb-5 opacity-75">
   <div class="row g-3 justify-content-center">
