Add unprocessable entity in booking

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -22,7 +22,7 @@
               style="width: 550px; height: 300px; margin: 0 auto;"
               class="car-map">
           </div>
-        </div> %>
+        </div>
       </div>
     </div>
   </div>
