--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,19 +11,13 @@
   </div>
 </div>
 
-<div id="car-log" class="container px-4 py-5 text-center common-bg">
+<footer id="car-log" class="container px-4 py-5 text-center common-bg">
   <div class="row g-5">
     <div class="col">
-      <%# if user_signed_in? %>
-<!--        <p class="text-success">Welcome <%#= current_user.email %> !!!</p>-->
-      <%# else %>
-<!--        <h3>You are not logged in!</h3>-->
         <p class="border border-end-0 border-start-0 border-dark-subtle mt-1 border-3">Elevate your driving experience! Luxury on four wheels!</p>
-      <%# end %>
-
     </div>
   </div>
-</div>
+</footer>
 
 <!--<div id="carousel-gran-car" class="carousel slide common-bg" data-bs-ride="carousel">
   <div class="carousel-inner">
