--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: #f8f9fa;
+  background-repeat: no-repeat;
   padding: 5px 0;
   text-align: center;
   position: relative;
