--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,12 @@
     <p>The Luxury is here for you</p>
      <div class="buttons">
         <%#= link_to "Login", cars_path, class: "btn btn-secondary" if !user_signed_in? %>
+        <div class="mb-3">
         <%= link_to "Cars", cars_path, class: "btn btn-secondary" %>
+        </div>
+        <div>
+        <%= link_to "Rent your car", new_car_path, class: "btn btn-secondary" %>
+        </div>
         <%#= link_to "Bookings", bookings_path(@bookings), class: "btn btn-secondary" if user_signed_in? %>
       </div>
   </div>
