Modif btn back to cars

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -5,6 +5,9 @@
 $body-font: "Georgia", "Times New Roman", "Times", "serif";
 $headers-font: "Georgia", "Times New Roman", "Times", "serif";
 
+$text-color: azure;
+
+
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
