--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -8,8 +8,8 @@
             <%= image_tag car.picture.url, class: "card-img-top", alt: "" %>
             <div class="card-body">
               <h3 class="card-title"><%= car.name %></h3>
-              <p class="card-text index-text"><i class="fa-solid fa-map-pin"></i> <%= car.address %></p>
-              <p class="card-text index-text"><%= car.price %> <i class="fa-solid fa-euro-sign"></i> /day </p>
+              <p class="card-text index-text"><i class="fas fa-map-pin"></i> <%= car.address %></p>
+              <p class="card-text index-text"><%= car.price %> € /day </p>
             </div>
           </div>
         <% end %>
