--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,10 +5,9 @@
 
 // External libraries
 @import "bootstrap";
-@import "font-awesome";
+@import url("https://use.fontawesome.com/releases/v6.5.2/css/all.css");
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/_new_car_form";
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
