--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,23 +6,23 @@
      <div class="buttons">
         <%#= link_to "Login", cars_path, class: "btn btn-secondary" if !user_signed_in? %>
         <div class="mb-3">
-        <%= link_to "Cars", cars_path, class: "btn btn-secondary" %>
+        <%= link_to "Browse our cars", cars_path, class: "btn btn-secondary" %>
         </div>
-        <div>
-        <%= link_to "Rent your car", new_car_path, class: "btn btn-secondary" %>
-        </div>
+        <!--<div>-->
+        <%#= link_to "Rent your car", new_car_path, class: "btn btn-secondary" %>
+        <!--</div>-->
         <%#= link_to "Bookings", bookings_path(@bookings), class: "btn btn-secondary" if user_signed_in? %>
       </div>
   </div>
 </div>
 
-<footer id="car-log" class="container px-4 py-5 text-center common-bg">
+<div id="car-log" class="px-4 py-5 text-center common-bg">
   <div class="row g-5">
     <div class="col">
         <p class="border border-end-0 border-start-0 border-dark-subtle mt-1 border-3">Elevate your driving experience! Luxury on four wheels!</p>
     </div>
   </div>
-</footer>
+</div>
 
 <!--<div id="carousel-gran-car" class="carousel slide common-bg" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -38,3 +38,9 @@
   </div>
 </div>-->
 </body>
+
+
+<!--Quand je suis sur la home, il n'y a pas besoin d'avoir Home au navbar-->
+<!--Mettre le logo sur le titre -->
+<!--Tag line le mettre plus grand -->
+<!--Mettre -->
