Modif title index cars + css

--- a/app/assets/stylesheets/pages/_cars-index.scss
+++ b/app/assets/stylesheets/pages/_cars-index.scss
@@ -63,3 +63,8 @@
   flex: 0 0 calc(33.33% - 20px); /* Ajustez la largeur de chaque colonne en fonction du nombre de cartes par ligne */
   margin-bottom: 20px; /* Espacement entre les cartes */
 }
+
+.super-cars{
+  display: flex;
+  justify-content: center
+}
