--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-index-cars">
-  <h1 class="title-cars text-center">Choose your daily dream car</h1>
-  <div class="row">
+  <h1 class="title-cars text-center">Explore our exclusive collection of 10 available supercars</h1>
+  <div class="row super-cars">
     <% @cars.each do |car| %>
       <div class="col-md-4">
         <%= link_to car_path(car), class: "card" do %>
