--- a/app/assets/stylesheets/pages/_new-booking.scss
+++ b/app/assets/stylesheets/pages/_new-booking.scss
@@ -1,3 +1,16 @@
 body {
   color: $text-color;
+  background-color: rgb(17, 16, 26);
+}
+
+.container {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
+  0 0 20px rgba(255, 255, 255, 0.7),
+  0 0 30px rgba(255, 255, 255, 0.7),
+  0 0 40px rgba(255, 255, 255, 0.7);
+}
+
+.table {
+  background-color: rgba(27, 3, 69, 0.36);
+  width: 80vw;
 }
