Modif navbar, supprimé le -home-

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,6 +62,7 @@
 .card-car-details .card-car-pricing {
   color: azure;
   font-size: 1.5rem;
+  margin-bottom: 15px;
 }
 
 .card-car-details .btn-back {
